<resources>
    <string name="app_name">Beheer Auto KM</string>
    <string name="namePerson">Test user</string>
    <string name="action_logOff">Log uit</string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_add_rit">Add rit</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_addcar">Add Car</string>
    <string name="passwordValue">Password</string>
    <string name="usernameValue">Username</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login">Log in!</string>
    <string name="createAccount">Create account</string>
    <string name="profile">Profile</string>
    <string name="newRit">Nieuwe rit</string>
    <string name="history">Geschiedenis</string>
    <string name="test">testje</string>
    <string name="silver">Zilver</string>
    <string name="color">Kleur</string>
    <string name="valueKM">12.564</string>
    <string name="KMStand">Kilometerstand</string>
    <string name="year">Bouwjaar</string>
    <string name="addRit">Add Begin Eind Rit!</string>
    <string name="addRitTotaal">Add Gereden KM Rit</string>
    <string name="menu_picture">Menu Picture</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="favoriteCar">favoriteCar</string>
    <string name="car">Car</string>
    <string name="fuel">Brandstof</string>
    <string name="yearValue">2013</string>
    <string name="fuelValue">Benzine</string>
    <string name="HP">Paardenkracht</string>
    <string name="HPValue">144</string>
    <string name="mileage">Kilometerstand</string>
    <string name="mileageValue">115.000</string>
    <string name="licenseplateValue">11–11–11</string>
    <string name="licenseplate">Kenteken</string>
    <string name="owner">Eigenaar</string>
    <string name="ownerValue">Geert</string>
    <string name="favCar">Favoriet</string>
    <string name="addCar">Add Car</string>
    <string name="selectedCar">Selected Car</string>
    <string name="title_activity_location">Locatie</string>
    <string name="track">Track location</string>
    <string name="otherImage">Add other image</string>
    <string name="rememberMe">Remember me</string>
    <string name="logo">Logo</string>
    <string name="developers">Developers</string>
    <string name="deletePhotos">Delete foto\'s</string>
    <string name="location">location</string>
    <string name="logInFailed"><b>Inloggen mislukt!</b></string>
    <string name="todo">...</string>
    <string name="idee">Het idee is...</string>
    <string name="title_activity_about_activity">About us</string>
    <string name="title_activity_history_activity">Ritgeschiedenis</string>
    <string name="title_activity_location_activity">title_activity_location_activity</string>
    <string name="newPhoto">Nieuwe foto</string>
    <string name="existingPhoto">Bestaande foto</string>

</resources>
