<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="5dp"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtInfo"
        style="@style/textFieldLoginStyle"
        android:layout_margin="0dp"
        android:padding="2dp"
        android:layout_below="@+id/imgProfile"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red" />

    <TextView
        style="@style/textStyle"
        android:text="@string/username"
        android:id="@+id/txtUsername"
        android:layout_below="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <TextView
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:id="@+id/txtPassword"
        android:layout_below="@+id/txtUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <EditText
        style="@style/textFieldLoginStyle"
        android:id="@+id/tbUsername"
        android:layout_toRightOf="@+id/txtUsername"
        android:layout_below="@+id/txtInfo"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:inputType="textPassword"
        android:text="@string/usernameValue" />

    <EditText
        style="@style/textFieldLoginStyle"
        android:id="@+id/tbPassword"
        android:layout_below="@+id/tbUsername"
        android:layout_toRightOf="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="@string/passwordValue" />

    <CheckBox
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:id="@+id/cbRemember"
        android:layout_below="@id/tbPassword"
        android:layout_alignLeft="@id/tbPassword"
        android:onClick="cbRememberPressed" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbRemember"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_createAccount"
            android:onClick="createAccount"
            android:text="@string/createAccount"
            style="@style/twoButtonStyle" />

        <Button
            android:id="@+id/btn_login"
            android:onClick="logIn"
            android:text="@string/login"
            style="@style/twoButtonStyle" />
    </LinearLayout>


</RelativeLayout>
