<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="geert.stef.sm.beheerautokm.Overview">-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BMW 4-series"
                android:textSize="40dp"
                android:id="@+id/name"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:src="@drawable/bmw"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/carPhoto" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carPhoto"
                android:layout_centerHorizontal="true">

                <TableRow>

                    <TextView
                        android:id="@+id/txtBouwjaar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2013"
                        android:textSize="20dp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/KMStand"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valueKM"
                        android:textSize="20dp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/silver"
                        android:textSize="20dp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txt_test"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test"
                        android:textSize="20dp" />
                </TableRow>

                <Button
                    android:id="@+id/btnAddRit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newRit"
                    android:textSize="20dp"
                    android:onClick="addRitOnClick" />

                <Button
                    android:id="@+id/btnHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="20dp"
                    android:onClick="historyOnClick" />
            </TableLayout>
        </RelativeLayout>
    </FrameLayout>

    <!-- The navigation drawer -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:background="#0000A0">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Add Car"
            android:id="@+id/btnAddCar"
            android:onClick="addCar"/>

        <ListView
            android:id="@+id/drawerList"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:layout_width="240dp"
            android:layout_height="match_parent"/>
        </LinearLayout>



</android.support.v4.widget.DrawerLayout>
